--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "author": "Jacob Zimmerman (jczimm) <jczimm@jczimm.com>",
   "license": "MIT",
   "main": "index.js",
+  "description": "the hyper-ephemeral thinking pad",
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
-    "start": "electron .",
+    "clean:dist": "npx del dist",
+    "clean:releases": "npx del releases",
+    "clean": "npm run clean:dist && npm run clean:releases",
+    "build": "echo \"~~ No build step ~~\" && exit 0",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:linux": "npm run build && electron-builder --linux",
+    "dist:all": "npm run clean:releases && npm run build && electron-builder -mwl",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "start": "electron ."
   },
   "dependencies": {
-    "electron-titlebar": "^0.0.3"    
+    "electron-titlebar": "^0.0.3"
   },
   "devDependencies": {
     "electron": "^3.0.10",
@@ -24,11 +32,75 @@
     "node": ">=8.12.0"
   },
   "build": {
+    "appId": "com.jczimm.livemind",
+    "copyright": "Copyright © 2018-present Jacob Zimmerman",
     "files": [
       "index.js",
       "config.js",
       "index.html",
       "build/icon.*"
-    ]
+    ],
+    "directories": {
+      "output": "releases"
+    },
+    "mac": {
+      "target": ["dmg", "pkg"],
+      "category": "public.app-category.utilities",
+      "icon": "build/icon.png",
+      "type": "distribution"
+    },
+    "dmg": {
+      "iconSize": 160,
+      "iconTextSize": 12,
+      "window": {
+        "width": 660,
+        "height": 400
+      },
+      "contents": [{
+        "x": 180,
+        "y": 170,
+        "type": "file"
+      }, {
+        "x": 480,
+        "y": 170,
+        "type": "link",
+        "path": "/Applications"
+      }]
+    },
+    "pkg": {
+      "license": "LICENSE"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable",
+        "zip"
+      ],
+      "icon": "build/icon.icns"
+    },
+    "nsis": {
+      "installerIcon": "build/icon.icns",
+      "license": "LICENSE",
+      "warningsAsErrors": false
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm",
+        "snap"
+      ],
+      "icon": "build/icon",
+      "category": "Utility"
+    },
+    "snap": {
+      "grade": "stable",
+      "summary": "the hyper-ephemeral thinking pad"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "jczimm",
+      "releaseType": "release"
+    }
   }
 }
