use travis for builds

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-titlebar": "^0.0.3"
   },
   "devDependencies": {
+    "del-cli": "^1.1.0",
     "electron": "^3.0.10",
     "electron-builder": "^20.36.2",
     "eslint": "5.3.0",
@@ -44,9 +45,11 @@
       "output": "releases"
     },
     "mac": {
-      "target": ["dmg", "pkg"],
+      "target": [
+        "dmg",
+        "pkg"
+      ],
       "category": "public.app-category.utilities",
-      "icon": "build/icon.png",
       "type": "distribution"
     },
     "dmg": {
@@ -56,16 +59,19 @@
         "width": 660,
         "height": 400
       },
-      "contents": [{
-        "x": 180,
-        "y": 170,
-        "type": "file"
-      }, {
-        "x": 480,
-        "y": 170,
-        "type": "link",
-        "path": "/Applications"
-      }]
+      "contents": [
+        {
+          "x": 180,
+          "y": 170,
+          "type": "file"
+        },
+        {
+          "x": 480,
+          "y": 170,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
     },
     "pkg": {
       "license": "LICENSE"
@@ -75,11 +81,9 @@
         "nsis",
         "portable",
         "zip"
-      ],
-      "icon": "build/icon.icns"
+      ]
     },
     "nsis": {
-      "installerIcon": "build/icon.icns",
       "license": "LICENSE",
       "warningsAsErrors": false
     },
@@ -90,7 +94,6 @@
         "rpm",
         "snap"
       ],
-      "icon": "build/icon",
       "category": "Utility"
     },
     "snap": {
