--- a/package.json
+++ b/package.json
@@ -47,33 +47,10 @@
       "output": "releases"
     },
     "mac": {
-      "target": [
-        "dmg",
-        "pkg"
-      ],
+      "target": "pkg",
+      "icon": "build/icons/icon.icns",
       "category": "public.app-category.utilities",
       "type": "distribution"
-    },
-    "dmg": {
-      "iconSize": 160,
-      "iconTextSize": 12,
-      "window": {
-        "width": 660,
-        "height": 400
-      },
-      "contents": [
-        {
-          "x": 180,
-          "y": 170,
-          "type": "file"
-        },
-        {
-          "x": 480,
-          "y": 170,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
     },
     "pkg": {
       "license": "LICENSE"
